--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>To-do List</title>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/styles.css"> <!--aca importamos el css -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h1>Lista de tareas</h1>
